ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-07-16 Benedikt Heintel
	- GUI:
		* Fixed #1358: Webmail link in tools should be hidden if domain has no mail
		* Fixed #1400: error in manage_users.php (left menu)
		* Fixed #1412: Some pages are not working with latest trunk
		* Fixed #1413: Editing e-mail account: new password is shell-escaped
		* Fixed #1414: SMTP AUTH not working with password, that contains a dollar sign
	- SETUP:
		* Fixed #1395: vhcs2.4.7-ispcp.sql / ispc-update - default language not migrated

2008-07-12 Marc Pujol
	- ENGINE:
		* Fixed #1405: mysqldump fails with remote database
	- GUI:
		* Fixed #1409: admin can not change welcome email (thanks sci2tech)
		* Fixed #1410: user can not add new protected areas (thanks sci2tech)
		* Fixed #1401: personal_change.php blank page (thanks sci2tech)
		* Fixed #1407: admin/manage_users.php does not show left menu (thanks sci2tech)

2008-07-09 Benedikt Heintel
	- ENGINE:
		* Fixed #1395: vhcs2.4.7-ispcp.sql / ispc-update - default language not migrated
	- GUI:
		* Fixed #1384: Client/Execute Query doesn't work.
		* Fixed #1393: patch to restore gui/client/ functionality
		* Fixed #1394: patch to restore gui/reseller/ functionality
		* Fixed #1396: Wordwrap in ticket system
	- DISTS:
		* Fixed #1399: CentOS Build Instructions and Config Broken
	- LANGUAGES:
		* Updated Italian
		* Updated Czech

2008-07-07 Benedikt Heintel
	- GUI:
		* Changed File Names
		* Fixed #1376: not possible to add a MySQL DB
		* Fixed #1386: when new sql user is added password confirmation is not checked corectly
		* Fixed #1387: /client/manage_sql.php is missing
		* Fixed #1388: admin can't remove language
		* Fixed #1389: user can not create catchall
		* Fixed #1390: user can not enable mail autorespond
		* Fixed #1391: Notice: Indirect modification of overloaded property DatabaseResult::$fields
	- LANGUAGES:
		* Updated French

2008-07-05 Benedikt Heintel
	- LANGUAGES:
		* Updated German
		* Updated Basque
